<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.btarduino.app.InicioActivity"
    android:background="@drawable/fondo1" >

    <TextView
        android:layout_marginTop="5sp"
        android:id="@+id/sens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensores"
        android:textSize="25sp" 
        android:textColor="#000000"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp" >

        <TableRow>

            <TextView
                android:id="@+id/lblHora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/hora"
                android:textSize="20sp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView_estado_BT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/temperatura"
                android:textSize="20sp" 
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/texto_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/lblLumi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/luminosidad"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/texto_lumi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="20sp"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow android:layout_marginTop="5sp" >

            <Button
                android:id="@+id/btnFan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/venti" 
                android:background="@drawable/venti"/>

            <Button
                android:id="@+id/btnFoco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/foco"
                android:background="@drawable/foco"/>

            <Button
                android:id="@+id/btnAuto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/auto" 
                android:background="@drawable/auto"/>
        </TableRow>
    </TableLayout>

</LinearLayout>